--- a/CollegeManager/CollegeManager.csproj
+++ b/CollegeManager/CollegeManager.csproj
@@ -199,10 +199,6 @@
     <Content Include="AngularJsApp\Teacher\Controller.js" />
     <Content Include="AngularJsApp\Teacher\Module.js" />
     <Content Include="AngularJsApp\Teacher\Service.js" />
-    <Content Include="App_Data\Database.mdf" />
-    <Content Include="App_Data\Database_log.ldf">
-      <DependentUpon>Database.mdf</DependentUpon>
-    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -266,6 +262,7 @@
     <Content Include="Views\Dashboard\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Data\" />
     <Folder Include="Sql_Scripts\" />
   </ItemGroup>
   <ItemGroup>
